# medi-procure-hub

./: .env  .env.example  .gitignore  README.md  TWILIO_SETUP.md  build_procurbosse.py  bun.lockb  capacitor.config.ts  const odbc = require('odbc');.sql  edgeone.json  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tailwind.config.ts  vercel.config.js  vite.config.admin.ts  vite.config.kiosk.ts  vite.config.ts  vite.config.ts.bak  vite.config.user.ts
admin-app/: electron-builder.cjs  electron-builder.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
android/: capacitor.settings.gradle
assets/: chart-vendor-D7bPdLdi.js  doc-vendor-CM1mazOX.js  index-CSurGk1q.css  index-CcbqlPTk.js  index.es-BDNIVGD9.js  pdf-C_YddgzV.js  pdf-vendor-DogX0YMQ.js  react-vendor-BmCe25aj.js  supabase-vendor-DvTqXkDU.js  tanstack-ClftYJvg.js  ui-vendor-DHyFUYZq.js
docs/: EL5_MediProcure_Admin_Technician_Guide.docx  EL5_MediProcure_User_Guide.docx  KEEPALIVE_BOT.md  KENYA_COMMUNICATION_SETUP.md  SUPABASE_MIGRATION_GUIDE.md  TECH_GUIDE_v21.4.md  TWILIO_FIX_DEPLOY.md  TWILIO_FIX_GUIDE.md  USER_GUIDE_v21.4.md  USER_MANUAL_v21.4.md  USER_MANUAL_v5.8.md
e2e/: print-smoke.spec.ts  refresh-smoke.spec.ts
electron/: main.js  preload.js
install/: README.md  install-procurbosse.bat  uninstall-procurbosse.bat
installer/: install-procurbosse.bat
installers/: CHECK_System.bat  CHECK_Updates.bat  INSTALL_ProcurBosse.bat  LAUNCH_ProcurBosse.bat  PORTABLE_INSTALL.bat  README.md  RUN_EXE.bat  SILENT_INSTALL_IT.bat  UNINSTALL_ProcurBosse.bat  install.bat
native/agent/: CMakeLists.txt  procurbosse-agent.cpp
public/: sw.js  (+4 more)
(+3833 files in other folders)
